# test_code_kc

./: BoschModelTest.cpp  CMakeLists.txt  DecisionTree.h  FraudDetectionTest.cpp  FraudTwoTowerTest.cpp  NycModelTest.cpp  TripTypeDetectionTest.cpp  fraud_predict_evadb.py  fraud_predict_python.py  fraud_predict_spark.py  fraud_two_tower_evadb.py  fraud_two_tower_python.py  fraud_two_tower_spark.py  function_fraud_detect_evadb.py  function_trip_type_evadb.py  function_two_tower_evadb.py  join_order_store.py  load_data_postgres.py  load_fraud_data_postgres.py  load_two_tower_data_postgres.py  repeat_customer.py  repeat_order.py  repeat_transactions.py  roberta_lora.py  roberta_lora_test.py  train_order_store.py  trip_type_predict_evadb.py  trip_type_predict_python.py  trip_type_predict_spark.py
resources/: ProductRating.csv  country_mapping.json  customer.csv  department_mapping.json  department_mapping.txt  financial_account.csv  nyc_2000Census.csv  product.csv  store_dept.csv
resources/model/: country_mapping.txt  fraud_detection.h5  fraud_detection.pth  fraud_dnn_weights.h5  fraud_dnn_weights.pth  fraud_xgboost_5_16.json  fraud_xgboost_model.json  fraud_xgboost_trans_5_32.json  fraud_xgboost_trans_no_f_5_32 .json  model_nyc_2_1024_2.h5  model_nyc_2_256_2.h5  model_nyc_2_512_2.h5  model_nyc_2_64_2.h5  product_encoder.h5  product_encoder.pth
resources/model/fraud_xgboost_5_16/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
resources/model/fraud_xgboost_9_1600/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  (+1560 more)
resources/model/fraud_xgboost_trans_5_1600/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  (+1546 more)
resources/model/fraud_xgboost_trans_5_32/: 13.txt  15.txt  16.txt  18.txt  2.txt  21.txt  23.txt  24.txt  27.txt  28.txt  3.txt  31.txt  6.txt  8.txt
resources/model/model_bosch_968_2/: model_bosch_2_1024_3.pt  model_bosch_2_128_3.h5  model_bosch_2_128_3.pt  model_bosch_2_16_3.h5  model_bosch_2_16_3.pt  model_bosch_2_256_3.h5  model_bosch_2_256_3.pt  model_bosch_2_512_3.h5  model_bosch_2_512_3.pt  model_bosch_2_64_3.h5  model_bosch_2_64_3.pt
resources/model/model_nyc_103_2/: model_nyc_2_1024_2.pt  model_nyc_2_128_2.h5  model_nyc_2_128_2.pt  model_nyc_2_16_2.pt  model_nyc_2_256_2.pt  model_nyc_2_32_2.h5  model_nyc_2_32_2.pt  model_nyc_2_512_2.pt  model_nyc_2_64_2.pt
